--- a/project_16/src/style.css
+++ b/project_16/src/style.css
@@ -4,11 +4,15 @@
     padding: 0;
 }
 
-html,
+html {
+    background: #1e1a20;
+}
+
+/* html,
 body
 {
     overflow: hidden;
-}
+} */
 
 .webgl
 {
